--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -569,11 +569,10 @@ service vendor.power_off_alarm /vendor/bin/power_off_alarm
     oneshot
 
 on boot
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu5/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu6/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu7/cpufreq/scaling_governor "interactive"
+    write /sys/class/kgsl/kgsl-3d0/idle_timer 120
+    write /sys/class/kgsl/kgsl-3d0/bus_split 0
+    write /sys/class/kgsl/kgsl-3d0/throttling 0
+    write /sys/class/kgsl/kgsl-3d0/force_clk_on 1
+    write /sys/class/kgsl/kgsl-3d0/force_bus_on 1
+    write /sys/class/kgsl/kgsl-3d0/force_rail_on 1
+    write /sys/class/kgsl/kgsl-3d0/force_no_nap 1
